# gsd_algebraic_restoration_of_pure_time_argument_of_probability

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 01_battery_d_deterministic.py  02_universal_regime_sweep.py  03_emergent_cointegration.py  04_lorenz_chaos.py
figures/: _generate_figures.py
gsd_puretime/: __init__.py  rotor.py
notebooks/: pure_time_estimator.ipynb
scripts/: sync_paper.sh
tests/: test_puretime.py  test_rotor.py
