[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsd-puretime"
version = "0.1.0"
description = "Pure-Time Argument-of-Probability Restorer (Paper 30 of GSD programme)"
readme = "README.md"
authors = [{name = "J. I. Vázquez Broquá", email = "juanignaciovazquez@uca.edu.ar"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
examples  = ["pandas>=1.5", "matplotlib>=3.5"]
notebook  = ["nbformat>=5.0", "jupyter"]
test      = ["pytest>=7.0"]
dev       = ["pytest>=7.0", "pandas>=1.5", "matplotlib>=3.5", "nbformat>=5.0"]

[tool.setuptools]
packages = ["gsd_puretime"]
